--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,19 @@
     transform: rotate(360deg);
   }
 }
+
+
+.gallery {
+  /* margin: 0 auto; */
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.imageSizer {
+  width: 30%;
+}
+
+.imageSizer img {
+  width: 100%;
+}
