Added stylings to gallery

--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,20 @@
   }
 }
 
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* CUSTOM  STYLINGS */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
+
+
+/* ================================================================ */
+/* GALLERY  STYLINGS */
+/* ================================================================ */
 .gallery {
-  /* margin: 0 auto; */
   justify-content: center;
   display: flex;
   flex-wrap: wrap;
+  background-color: #DCDCDC;
 }
 
 .imageSizer {
